# seraph

./: .ghci  .gitignore  cabal.haskell-ci  cabal.project  cabal.project.local  flake.nix  result
.github/workflows/: haskell-ci.yml
seraph/: seraph.cabal
seraph-bench/: seraph-bench.cabal
seraph-th/: seraph-th.cabal
seraph-th/src/Seraph/: TH.hs
seraph/bench/: BinTree.hs  Cars.hs  Expr.hs  Main.hs  Minecraft.hs  Testing.hs
seraph/include/: seraph.h
seraph/src/: Seraph.hs
seraph/src/Seraph/: Internal.hs  QualifiedDo.hs
seraph/src/Seraph/Internal/: Exts.hs  Get.hs  Put.hs  Util.hs
seraph/test/: RoundTripSpec.hs
serialize/: serialize.cabal
serialize-bench/: serialize-bench.cabal
serialize-th/: serialize-th.cabal
serialize-th/src/Serialize/: TH.hs
serialize/bench/: BinTree.hs  Cars.hs  Dataset.hs  Expr.hs  Main.hs  Minecraft.hs  Testing.hs
serialize/include/: serialize.h
serialize/src/: Serialize.hs
serialize/src/Serialize/: Internal.hs  QualifiedDo.hs
serialize/src/Serialize/Internal/: Exts.hs  Get.hs  Prim.hs  Put.hs  Types.hs  Util.hs
serialize/test/: PropertiesSpec.hs  RoundTripSpec.hs
