cabal-version:      3.6
name:               serialize
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             brian
maintainer:         littlebubu.shu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
tested-with: GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.2

common common-options
  default-extensions:
    FlexibleInstances,
    FlexibleContexts,
    InstanceSigs,
    MultiParamTypeClasses,
    ConstraintKinds,
    LambdaCase,
    EmptyCase,
    TupleSections,
    BangPatterns,
    TypeApplications,
    StandaloneDeriving,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
    DataKinds,
    ConstraintKinds,
    TypeApplications,
    KindSignatures,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveDataTypeable,
    DeriveLift,
    DeriveTraversable ,
    GeneralizedNewtypeDeriving,
    GADTs,
    PolyKinds,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    StandaloneKindSignatures,
    ExistentialQuantification,
    TypeOperators,
    BlockArguments,
    ImportQualifiedPost,

    MagicHash,
    UnliftedNewtypes,
    UnboxedTuples,
    UnboxedSums,
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wno-name-shadowing
    -- until OverloadedRecordUpdate stabilizes
    -Wno-ambiguous-fields
    -Wno-unticked-promoted-constructors
    -Wno-partial-type-signatures
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Werror=incomplete-record-updates
    -Wcpp-undef
    -Widentities
  build-depends:
    base >= 4.12 && <5,
    bytestring,
    text >= 2.0,
    containers,
    unordered-containers,
    vector,
    primitive,
    primitive-unaligned,
    byte-order,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Serialize
      Serialize.QualifiedDo
      Serialize.Internal
        Serialize.Internal.Get
        Serialize.Internal.Put
        Serialize.Internal.Util
        Serialize.Internal.Exts
  include-dirs:
    include
  -- need to add this so it appears in cabal sdist
  -- makes haskell-ci work
  install-includes:
    serialize.h

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  
test-suite serialize-test
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    RoundTripSpec
  build-depends:
    serialize,
    hspec ^>= 2.9.4,
    QuickCheck ^>= 2.14.2,
    quickcheck-instances ^>= 0.3.27,
  build-tool-depends:
    hspec-discover:hspec-discover,
  if impl(ghc >= 9.2.2)
    ghc-options: -fcheck-prim-bounds
